--- a/app/src/main/res/layout/activity_search_main.xml
+++ b/app/src/main/res/layout/activity_search_main.xml
@@ -5,18 +5,71 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".presentation.SearchMovieActivity">
 
         <TextView
+            android:id="@+id/tv_recent_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/rectangle_fill_gray_8dp"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="8dp"
+            android:text="@string/recent_search"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/rectangle_fill_purple_8dp"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="8dp"
+            android:text="@string/search_keyword"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_recent_search"
+            app:layout_constraintEnd_toStartOf="@+id/tv_recent_search"
+            app:layout_constraintTop_toTopOf="@+id/tv_recent_search" />
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/rectangle_border_purple_8dp"
+            android:hint="@string/search_hint"
+            android:maxLines="1"
+            android:paddingVertical="8dp"
+            android:paddingStart="8dp"
+            android:textColorHint="@color/gray_c6"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_search"
+            app:layout_constraintEnd_toStartOf="@+id/tv_search"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_search" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="26dp"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/editText"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_movie_list" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
