--- a/app/src/main/res/layout/item_movie_list.xml
+++ b/app/src/main/res/layout/item_movie_list.xml
@@ -73,6 +73,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:textColor="@color/black"
+                android:text="@{viewModel.pubDate}"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_movie_release"
                 app:layout_constraintStart_toEndOf="@+id/tv_movie_release"
                 app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
