--- a/app/src/main/res/layout/activity_search_main.xml
+++ b/app/src/main/res/layout/activity_search_main.xml
@@ -41,7 +41,7 @@
             app:layout_constraintTop_toTopOf="@+id/tv_recent_search" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/et_search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -67,7 +67,7 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText"
+            app:layout_constraintTop_toBottomOf="@+id/et_search"
             tools:itemCount="3"
             tools:listitem="@layout/item_movie_list" />
 
