--- a/app/src/main/res/layout/item_recent_search_list.xml
+++ b/app/src/main/res/layout/item_recent_search_list.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.search_movie_flow.data.dto.RecentSearchEntity" />
+            type="com.search_movie_flow.data.dto.RecentSearchDto" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
